--- a/ios/Runner/CustomTheme.plist
+++ b/ios/Runner/CustomTheme.plist
@@ -35,7 +35,7 @@
 		<key>TeamMemberMessageTextStyle</key>
 		<dict>
 			<key>textColorLink</key>
-			<string>#2283F6</string>
+			<string>#66F99A</string>
 			<key>fontName</key>
 			<string>Arial</string>
 			<key>textSize</key>
@@ -57,7 +57,7 @@
 		<key>UserMessageTextStyle</key>
 		<dict>
 			<key>textColorLink</key>
-			<string>#2283F6</string>
+			<string>#66F99A</string>
 			<key>fontName</key>
 			<string>Arial</string>
 			<key>textSize</key>
